--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
 
   <hr>
 
-  <footer>
-    <p>Charlie Tharin</p>
-    <p>Email: cbtharin@gmail.com</p>
-    <p>Phone: 702-292-3345</p>
+ <footer>
+    <p class='footp'>Charlie Tharin</p>
+    <p class='footp'>Email: cbtharin@gmail.com</p>
+    <p class='footp'>Phone: 702-292-3345</p>
   </footer>
 </body>
 </html>
