--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,23 @@
      font-size: 16px;
     
     }
+.profile-pic {
+      display: block;
+      margin: 0 auto 1rem;
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 4px solid white;
+    }
 
+    .blog-pic {
+      display: block;
+      margin: 0 auto 1rem;
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+    }
     nav a {
       text-decoration: none;
       font-weight: bold;
