--- a/resume.html
+++ b/resume.html
@@ -67,3 +67,114 @@
       border-bottom: 2px solid #4caf50;
       padding-bottom: 0.3rem;
     }
+
+    h3 {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      font-weight: 600;
+    }
+
+    p, li {
+      font-size: 1rem;
+      line-height: 1.5;
+      color: #ddd;
+    }
+
+    .footp {
+    	 color: #2c333a;
+         line-height: 1;
+         font-size: 1.2rem;
+         line-height: 0.2;
+    }
+
+    .indented {
+      margin-left: 20px;
+    }
+
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      background-color: #e0e0e0;
+      color: #2c333a;
+      border-top: 3px solid #4caf50;
+      text-align: center;
+      font-size: 0.95rem;
+    }
+  </style>
+</head>
+<body>
+
+  <nav>
+  <a href="index.html">Home</a> |
+  <a href="front.html">Blog</a> |
+  <a href="resume.html">About Me</a> |
+  <a href="connnectionsripoff.html">Associations</a>
+</nav>
+
+  <div class="container">
+    <img src="Charlie.jpg" alt="Charlie Tharin" class="profile-pic">
+    <h1>About Me – Charlie Tharin</h1>
+    <p>
+      My name is Charlie Tharin. I created this website as a way to record and document my various interests and projects. 
+      While I'm not an expert in any field, I hope my hobbies and creations entertain, but also serve as a way to learn from my own experiences. 
+      I love 3D printing, scale-modeling, remote control, making music/art and creating things.
+    </p>
+
+    <h2>Education</h2>
+    <p>
+      <strong>University of Georgia, Athens, GA</strong><br>
+      Bachelor of Physics, Bachelor of Mechanical Engineering, Spring 2028<br>
+      GPA: 4.00/4.00
+    </p>
+
+    <h2>Work Experience</h2>
+    <h3>Lanier Real Estate Management, Summer 2024</h3>
+    <ul class="indented">
+      <li>Managed real estate documents for over 40 homeowners associations and nearly 100 employees</li>
+      <li>Created organizational system to streamline operations for a multi-million dollar company</li>
+    </ul>
+
+    <h2>Additional Experience</h2>
+    <h3>Zhao Nano Lab – Research Assistant, Jan 2025–present</h3>
+    <ul class="indented">
+      <li>Engineered a device that automates the collection of laser spectra (ongoing)</li>
+    </ul>
+
+    <h3>Georgia Governor's Honors Program – Physics Alumni, Summer 2023</h3>
+    <ul class="indented">
+      <li>Selected from over 3,000 applicants for a residential summer enrichment program for gifted high school students</li>
+      <li>Conducted and published novel research on toroidal propellers; details available on my website</li>
+    </ul>
+
+    <h3>STEAM Dreams – Personal Website & Blog, 2022–present</h3>
+    <ul class="indented">
+      <li>2000+ collective views of custom-made STL files on Thingiverse</li>
+      <li>Projects include: homemade foundry, custom hydrofoil fabrications, zen garden sand table</li>
+    </ul>
+
+    <h3>Compassion Christian Church – Kids Team Serve Team Leader & Tech Manager, 2021–present</h3>
+    <ul class="indented">
+      <li>Volunteered 150+ hours with elementary-aged children</li>
+      <li>Supervised A/V Production for over 100 people on a weekly basis</li>
+    </ul>
+
+    <h2>Involvement</h2>
+    <h3>UGA Formula EV Team – Suspension Systems Engineer, Oct 2024–present</h3>
+    <ul class="indented">
+      <li>Optimized functional FSEA car parts through Finite Element Analysis</li>
+    </ul>
+
+    <h3>Chamber Music Society, Oct 2024–present</h3>
+    <ul class="indented">
+      <li>Performed violin in chamber quartet for audiences up to 150 people</li>
+    </ul>
+  </div>
+
+ <footer>
+    <p class='footp'>Charlie Tharin</p>
+    <p class='footp'>Email: cbtharin@gmail.com</p>
+    <p class='footp'>Phone: 702-292-3345</p>
+  </footer>
+
+</body>
+</html>
